Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
     update-alternatives --set phpdbg /usr/bin/phpdbg$(phpVersion)
     update-alternatives --set php-cgi /usr/bin/php-cgi$(phpVersion)
     update-alternatives --set phar.phar /usr/bin/phar.phar$(phpVersion)
-    php -version
+    D:\Instaladores\laragon\bin\php\php-7.4.10-Win32-vc15-x64\php -version
   displayName: 'Use PHP version $(phpVersion)'
 
 - script: composer install --no-interaction --prefer-dist
