--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,5 +22,5 @@ steps:
     D:\Instaladores\laragon\bin\php\php-7.4.10-Win32-vc15-x64\php -version
   displayName: 'Use PHP version $(phpVersion)'
 
-- script: composer install --no-interaction --prefer-dist
-  displayName: 'composer install'
+- script: ./phpunit
+  displayName: 'Run tests with phpunit'
